# rosettax87_jit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
aotinvoke/: CMakeLists.txt
aotinvoke/src/: RosettaAotApi.cpp  RosettaAotApi.h  main.cpp
benchmarks/: CMakeLists.txt  bench_addr_fold.c  bench_compare.c  bench_const_promote.c  bench_f32.c  bench_interleaved_mov.c  bench_keepalive.c  bench_mem_cse.c
rosetta_config/include/rosetta_config/: Config.h
rosetta_config/src/: Config.cpp
rosetta_core/: CMakeLists.txt
rosetta_core/include/rosetta_core/: AbiInfo.h  AssemblerHelpers.hpp  ClassifyArmPCHook.h  CustomTranslationHook.h  DecodeOpcodeHook.h  FlagEffects.h  IRBlock.h  IRInstr.h  IRModuleData.h  IROperand.h  IRTerminator.h  ModuleResult.h  Opcode.h  Opcode_26_4.h  Register.h  RosettaCore.h  RuntimeLibC.h  ThreadContextOffsets.h  TranslatorCustom.h  TranslatorHelpers.hpp  TranslatorX87.h  TranslatorX87Helpers.hpp  X87Cache.h  X87IR.h  hook.h
rosetta_core/src/: AssemblerHelpers.cpp  ClassifyArmPCHook.cpp  CustomTranslationHook.cpp  DecodeOpcodeHook.cpp  FlagEffects.cpp  IROperand.cpp  IRTerminator.cpp  ModuleResult.cpp  Opcode.cpp  OpcodeCompatibility.cpp  Register.cpp  RosettaCore.cpp  RuntimeLibC.cpp  Translator.cpp  TranslatorCustom.cpp  TranslatorHelpers.cpp  TranslatorX87.cpp  TranslatorX87Fusion.cpp  TranslatorX87Helpers.cpp  TranslatorX87Internal.hpp  X87BridgeDemand.cpp  X87Cache.cpp  X87IRBuild.cpp  X87IRLower.cpp  X87IROptimize.cpp  hook.cpp
rosetta_loader/: CMakeLists.txt
rosetta_loader/src/: mach_exception.hpp  main.cpp  offset_finder.cpp  offset_finder.hpp  types.h
rosetta_runtime/: CMakeLists.txt
rosetta_runtime/src/: Offsets.cpp  Offsets.h  RuntimeOffsets.h  X87.cpp  main.cpp
rosetta_shared/: CMakeLists.txt
rosetta_shared/include/rosetta_shared/: LoaderTypes.h  MachoLoader.h  MachoScan.h  Offsets.h
scripts/: ida_rosetta_hexrays.py  ida_rosetta_trace_loader.py  inspect_function.sh  parse_rosetta_trace.py  run_benchmarks.sh  run_bridge_demand_tests.py  run_tests.sh  verify_arpl.sh
tests/: CMakeLists.txt  test_addr32.c  test_addr_fold.c  test_bridge_pressure.c  test_const_promote.c  test_decoder_arpl.c  test_decoder_fcomp_st.c  test_f32_raw.c  test_fuse_fcom_test.c  test_int_regbase.c  test_ir_algebra.c  test_ir_deferred.c  test_ir_fpr_pressure.c  test_ir_gpr_pressure.c  test_keepalive.c  test_mem_cse.c  test_run_breaks.c  test_sse_whitelist.c  test_transparent_int.c  test_x87_full.c
